--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="row justify-content-center fs-5 text-justify">
           <div class="col-md-3 mb-2">
             <div class="card" style="border: none;">
-              <img src="img/about.jpg" class="card-img-top" alt="porto1">
+              <img src="img/about-min.jpg" class="card-img-top" alt="porto1">
             </div>
           </div>
           <div class="col-md-5">
