--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- bootstrap dan CSS -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+
+    <!-- FontAwesome -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/font-awesome.css">
     <title>Web Profile | Naufal</title>
@@ -46,9 +50,11 @@
     </section>
     <!-- Akhir Jumbotron -->
 
+    <!-- Arrow -->
     <section id="arrow" class="jumbotron text-center">
       <i class="fa fa-angle-double-down fa-5x"></i>
     </section>
+    <!-- Akhir -->
 
     <!-- About -->
     <section id="about">
@@ -73,7 +79,7 @@
     </section>
     <!-- Akhir About -->
 
-    <!-- Projects -->
+    <!-- Portofolio -->
     <section id="portofolio">
       <div class="container">
         <div class="row text-center mb-3">
@@ -100,8 +106,9 @@
         </div>
       </div>
     </section>
-    <!-- Akhir Projects -->
-    <!-- Contact -->
+    <!-- Akhir -->
+
+    <!-- FindMe -->
     <footer class="footer text-center" style="background-color: #ffffff"  id="findme">
       <div class="container">
           <div class="row">
@@ -116,7 +123,8 @@
             </div>
       </div>
   </footer>
-    <!-- Akhir Contact -->
+    <!-- Akhir -->
+
     <!-- Footer -->
     <div id="copyright">
       <div class="copyright py-1 text-center bg-dark text-white">
