--- a/index.html
+++ b/index.html
@@ -100,9 +100,26 @@
             <div class="card">
               <img src="img/2.jpg" class="card-img-top" alt="porto2">
               <div class="card-body">
-                <p class="card-text text-dark">PESERTA dalam acara "Webinar Kuliah umum #3 Rekayasa Perangkat Lunak dalam 4 Babak" yang diselenggarakan oleh i</p>
+                <p class="card-text text-dark">PESERTA dalam acara "Webinar Kuliah umum #3 Rekayasa Perangkat Lunak dalam 4 Babak" </p>
               </div>
             </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/3.jpeg" class="card-img-top" alt="porto3">
+              <div class="card-body">
+                <p class="card-text text-dark">Juara 1 Lomba Ddp Family Gathering Ke-24 Teknik Informatika</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/4.jpeg" class="card-img-top" alt="porto4">
+              <div class="card-body">
+                <p class="card-text text-dark">PESERTA Training Soft Skills Mahasiswa Tahun Akademik 2019/2020 </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
