--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm fixed-top text-uppercase" style="background-color: #ffffff">
       <div class="container">
-        <h3 class="float-md-start text-dark mb-0">NAUFAL</h3>
+        <h3 class="float-md-start text-dark mb-0">Naufal</h3>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,6 +29,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#skills">Skills</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#portofolio">Portofolio</a>
@@ -70,21 +73,70 @@
             </div>
           </div>
           <div class="col-md-5">
-            <h2>Tentang Aku</h2>
-            <p class="lead">Muhammad Naufal Hafizh seorang Mahasiswa kelahiran 20 desember 2000 di Jawa timur, Magetan. Sedang menempuh pendidikan S1 Teknik Infomatika di Yogyakarta</p>
-            <p class="lead">Memiliki ketertarikan terhadap UI/UX, Web Programming dan Mobile Programming</p>
+            <h2>Wanna Know Me?</h2>
+            <p class="lead">Muhammad Naufal Hafizh, is a student who was born on December 20, 2000 in East Java, Magetan. Currently studying S1 Informatics Engineering in Yogyakarta</p>
+            <p class="lead">Have an interest in UI/UX, Web Programming and Mobile Programming</p>
           </div>
         </div>
       </div>      
     </section>
     <!-- Akhir About -->
 
+    <!-- skill -->
+    <section class="" id="skills">
+      <div class="bubble"></div>
+      <div class="container">
+        <div class="row text-center">
+            <h2 class="">How Much Have I Learned ?</h2>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-lg-2 col-md-12 mb-2">
+            <div class="main-skills skill1">
+              <div class="card-skills text-center">
+                <img src="img/html.png" alt="" width="50">
+                <h6>HTML</h6>
+                <span>82%</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-2 col-sm-12">
+            <div class="main-skills skill2">
+              <div class="card-skills text-center">
+                <img src="img/css.png" alt="" width="50">
+                <h6>CSS</h6>
+                <span>65%</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-2 col-sm-12">
+            <div class="main-skills skill3">
+              <div class="card-skills text-center">
+                <img src="img/php.png" alt="" width="77">
+                <h6>PHP</h6>
+                <span>24%</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-2 col-sm-12">
+            <div class="main-skills skill4">
+              <div class="card-skills text-center">
+                <img src="img/js.png" alt="" width="40">
+                <h6>javascript</h6>
+                <span>30%</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- akhir skill -->
+
     <!-- Portofolio -->
     <section id="portofolio">
       <div class="container">
-        <div class="row text-center mb-3">
-          <div class="col">
-            <h2>Portofolio</h2>
+        <div class="row mb-3">
+          <div class="col text-center">
+            <h2>What Have I Accomplished ?</h2>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -132,11 +184,11 @@
               <div class="col-lg-4 mb-5 mb-lg-0">
               </div>
               <div class="col-lg-4 mb-5 mb-lg-0" >
-                  <h4 class="text-uppercase mb-4 text-dark">FIND ME</h4>
-                  <a class="btn btn-outline-white btn-social mx-1 text-dark" href="https://www.instagram.com/mnaufalhafizh20"><i class="fa fa-instagram fa-3x"></i></a>
-                  <a class="btn btn-outline-white btn-social mx-1 text-dark" href="https://www.facebook.com/naufal.h.hafizh"><i class="fa fa-facebook-square fa-3x"></i></a>
-                  <a class="btn btn-outline-white btn-social mx-1 text-dark" href="https://www.linkedin.com/in/muhammad-naufal-hafizh-52411120a/"><i class="fa fa-linkedin fa-3x"></i></a>
-                  <a class="btn btn-outline-white btn-social mx-1 text-dark" href="https://twitter.com/EfficientAnsici"><i class="fa fa-twitter-square fa-3x"></i></a>
+                  <h4 class="text-uppercase mb-3 text-dark">SOCIAL MEDIA</h4>
+                  <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.instagram.com/mnaufalhafizh20"><i class="fa fa-instagram fa-2x"></i></a>
+                  <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.facebook.com/naufal.h.hafizh"><i class="fa fa-facebook-square fa-2x"></i></a>
+                  <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.linkedin.com/in/muhammad-naufal-hafizh-52411120a/"><i class="fa fa-linkedin fa-2x"></i></a>
+                  <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://twitter.com/EfficientAnsici"><i class="fa fa-twitter-square fa-2x"></i></a>
             </div>
       </div>
   </footer>
