--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <!-- FontAwesome -->
     <link rel="stylesheet" href="fontawesome-free-5.15.3-web/css/all.css">
 
+    <!-- Animate On Scroll Library -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+
     <title>Web Profile | Naufal</title>
   </head>
   <body class="text-white bg-dark" id="home">
@@ -48,14 +52,19 @@
     <!-- Jumbotron -->
     <section id="home" class="jumbotron text-center">
       <p class="lead">HEY! I AM</p>
-      <h1 class="display-3 text-uppercase">Muhammad Naufal Hafizh</h1>
-      <p class="lead">Informatic Engineering | Ahmad Dahlan University</p>
+      <h1 id="Namaabot" class="display-3 text-uppercase">Muhammad Naufal Hafizh</h1>
+      <p class="lead leadinfor">Informatic Engineering | Ahmad Dahlan University</p>
     </section>
     <!-- Akhir Jumbotron -->
 
     <!-- Arrow -->
     <section id="arrow" class="jumbotron text-center">
-      <i class="fa fa-angle-double-down fa-5x"></i>
+      <p class="lead text-uppercase">
+        Scroll Down
+    </p>
+      <div class="arrow bounce">
+        <i class="fa fa-angle-double-down fa-5x"></i>
+      </div>
     </section>
     <!-- Akhir -->
 
@@ -67,16 +76,16 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-justify">
-          <div class="col-md-3 mb-2">
+          <div data-aos="fade-right" class="col-md-3 mb-2">
             <div class="card" style="border: none; border-radius: 12px;">
               <img src="img/about-min.jpg" style="border: none; border-radius: 12px;" class="card-img-top" alt="porto1">
             </div>
           </div>
-          <div class="col-md-5">
+          <div data-aos="fade-left" class="col-md-5">
             <h2>Wanna Know Me?</h2>
             <p class="lead">Muhammad Naufal Hafizh, is a student who was born on December 20, 2000 in East Java, Magetan. Currently studying S1 Informatics Engineering in Yogyakarta</p>
             <p class="lead">Have an interest in UI/UX, Web Programming and Mobile Programming</p> <br>
-            <div class="row mb-2">
+            <div class="row mb-3">
               <div class="col-md-2" style="padding-right: 0px;">
                 <i class="fa fa-book-open fa-4x"></i>
               </div>
@@ -95,11 +104,11 @@
     <section class="" id="skills">
       <div class="bubble"></div>
       <div class="container">
-        <div class="row text-center">
+        <div data-aos="fade-down" class="row text-center">
             <h2 class="">How Much Have I Learned ?</h2>
         </div>
         <div class="row justify-content-center">
-          <div class="col-lg-2 col-md-12 mb-2">
+          <div data-aos="zoom-in" class="col-lg-2 col-md-12 mb-2">
             <div class="main-skills skill1">
               <div class="card-skills text-center">
                 <img src="img/html.png" alt="" width="50">
@@ -108,7 +117,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-2 col-sm-12">
+          <div data-aos="zoom-in" class="col-lg-2 col-sm-12">
             <div class="main-skills skill2">
               <div class="card-skills text-center">
                 <img src="img/css.png" alt="" width="50">
@@ -117,7 +126,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-2 col-sm-12">
+          <div data-aos="zoom-in" class="col-lg-2 col-sm-12">
             <div class="main-skills skill3">
               <div class="card-skills text-center">
                 <img src="img/php.png" alt="" width="77">
@@ -126,7 +135,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-2 col-sm-12">
+          <div data-aos="zoom-in" class="col-lg-2 col-sm-12">
             <div class="main-skills skill4">
               <div class="card-skills text-center">
                 <img src="img/js.png" alt="" width="40">
@@ -135,7 +144,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-2 col-sm-12">
+          <div data-aos="zoom-in" class="col-lg-2 col-sm-12">
             <div class="main-skills skill5">
               <div class="card-skills text-center">
                 <img src="img/c++.png" alt="" width="50">
@@ -144,7 +153,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-2 col-sm-12">
+          <div data-aos="zoom-in" class="col-lg-2 col-sm-12">
             <div class="main-skills skill6">
               <div class="card-skills text-center">
                 <img src="img/java.png" alt="" width="50">
@@ -153,7 +162,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-2 col-sm-12">
+          <div data-aos="zoom-in" class="col-lg-2 col-sm-12">
             <div class="main-skills skill7">
               <div class="card-skills text-center">
                 <img src="img/python.png" alt="" width="40">
@@ -171,11 +180,11 @@
     <section id="portofolio">
       <div class="container">
         <div class="row mb-3">
-          <div class="col text-center">
+          <div data-aos="fade-down" class="col text-center">
             <h2>What Have I Accomplished ?</h2>
           </div>
         </div>
-        <div class="row justify-content-center">
+        <div data-aos="zoom-in" class="row justify-content-center">
           <div id="carouselExampleControls" class="carousel slide w-50" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -229,7 +238,28 @@
       </div>
     </div>
      <!-- Akhir Footer -->
+
+     <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
+    <!-- Animate On Scroll JS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 1000,
+      });
+    </script>
+
+    <!-- GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/TextPlugin.min.js"></script>
+    <script>
+
+      gsap.registerPlugin(TextPlugin);
+      gsap.from(".leadinfor", {duration: 3, text: "", delay: 0.5,})
+
+    </script>
+
   
 </body>
 </html>
