--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#skills">Skills</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#portofolio">Portofolio</a>
+              <a class="nav-link" href="#skills">Skills & Education</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#findme">Find Me</a>
@@ -53,7 +50,7 @@
     <section id="home" class="jumbotron text-center">
       <p class="lead">HEY! I AM</p>
       <h1 id="Namaabot" class="display-3 text-uppercase">Muhammad Naufal Hafizh</h1>
-      <p class="lead leadinfor">Informatic Engineering | Ahmad Dahlan University</p>
+      <p class="lead leadinfor">{ Learn | Practice | Optimism | Feedback }</p>
     </section>
     <!-- Akhir Jumbotron -->
 
@@ -83,16 +80,15 @@
           </div>
           <div data-aos="fade-left" class="col-md-5">
             <h2>Wanna Know Me?</h2>
-            <p class="lead">Muhammad Naufal Hafizh, is a student who was born on December 20, 2000 in East Java, Magetan. Currently studying S1 Informatics Engineering in Yogyakarta</p>
-            <p class="lead">Have an interest in UI/UX, Web Programming and Mobile Programming</p> <br>
+            <p class="lead">Muhammad Naufal Hafizh, is a Informatics Undergraduate student. Currently studying in Yogyakarta</p>
+            <p class="lead">Have an interest in : </p>
+            <ul class="fa-ul">
+              <li class="lead"><span class="fa-li fas fa-edit"></span>UI/UX Design</li>
+              <li class="lead"><span class="fa-li fas fa-edit"></span>Web Programming</li>
+              <li class="lead"><span class="fa-li fas fa-edit"></span>Mobile Programming</li>
+            </ul>
             <div class="row mb-3">
-              <div class="col-md-2" style="padding-right: 0px;">
-                <i class="fa fa-book-open fa-4x"></i>
-              </div>
-              <div class="col-md-4" style="padding-left: 20px;">
-                <h4>2+</h4>
-                  <p>Year Experience</p>
-              </div>
+              
             </div>
           </div>
         </div>
@@ -100,118 +96,105 @@
     </section>
     <!-- Akhir About -->
 
-    <!-- skill -->
+    <!-- skill dan akademik -->
     <section class="" id="skills">
-      <div class="bubble"></div>
-      <div class="container">
-        <div data-aos="fade-down" class="row text-center">
-            <h2 class="">How Much Have I Learned ?</h2>
+      <div class="row justify-content-center fs-5">
+        <div class="col-md-4">
+          <div class="row justify-content-center">
+              <h2 data-aos="fade-up" >Learning Process</h2>
+            <div data-aos="zoom-in" class="col-md-4">
+              <div class="main-skills skill1">
+                <div class="card-skills text-center">
+                  <img src="img/html.png" alt="" width="40">
+                  <h6>HTML</h6>
+                  <span>82%</span>
+                </div>
+              </div>
+            </div>
+            <div data-aos="zoom-in" class="col-md-4">
+              <div class="main-skills skill2">
+                <div class="card-skills text-center">
+                  <img src="img/css.png" alt="" width="40">
+                  <h6>CSS</h6>
+                  <span>65%</span>
+                </div>
+              </div>
+            </div>
+            <div data-aos="zoom-in" class="col-md-4">
+              <div class="main-skills skill3">
+                <div class="card-skills text-center">
+                  <img src="img/php.png" alt="" width="67">
+                  <h6>PHP</h6>
+                  <span>24%</span>
+                </div>
+              </div>
+            </div>
+            <div data-aos="zoom-in" class="col-md-4">
+              <div class="main-skills skill4">
+                <div class="card-skills text-center">
+                  <img src="img/js.png" alt="" width="30">
+                  <h6>Javascript</h6>
+                  <span>30%</span>
+                </div>
+              </div>
+            </div>
+            <div data-aos="zoom-in" class="col-md-4">
+              <div class="main-skills skill5">
+                <div class="card-skills text-center">
+                  <img src="img/c++.png" alt="" width="40">
+                  <h6>C++</h6>
+                  <span>70%</span>
+                </div>
+              </div>
+            </div>
+            <div data-aos="zoom-in" class="col-md-4">
+              <div class="main-skills skill6">
+                <div class="card-skills text-center">
+                  <img src="img/java.png" alt="" width="40">
+                  <h6>Java</h6>
+                  <span>60%</span>
+                </div>
+              </div>
+            </div>
+            <div data-aos="zoom-in" class="col-md-4">
+              <div class="main-skills skill7">
+                <div class="card-skills text-center">
+                  <img src="img/python.png" alt="" width="40">
+                  <h6>Python</h6>
+                  <span>30%</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="row justify-content-center">
-          <div data-aos="zoom-in" class="col-lg-2 col-md-12 mb-2">
-            <div class="main-skills skill1">
-              <div class="card-skills text-center">
-                <img src="img/html.png" alt="" width="50">
-                <h6>HTML</h6>
-                <span>82%</span>
-              </div>
-            </div>
-          </div>
-          <div data-aos="zoom-in" class="col-lg-2 col-sm-12">
-            <div class="main-skills skill2">
-              <div class="card-skills text-center">
-                <img src="img/css.png" alt="" width="50">
-                <h6>CSS</h6>
-                <span>65%</span>
-              </div>
-            </div>
-          </div>
-          <div data-aos="zoom-in" class="col-lg-2 col-sm-12">
-            <div class="main-skills skill3">
-              <div class="card-skills text-center">
-                <img src="img/php.png" alt="" width="77">
-                <h6>PHP</h6>
-                <span>24%</span>
-              </div>
-            </div>
-          </div>
-          <div data-aos="zoom-in" class="col-lg-2 col-sm-12">
-            <div class="main-skills skill4">
-              <div class="card-skills text-center">
-                <img src="img/js.png" alt="" width="40">
-                <h6>Javascript</h6>
-                <span>30%</span>
-              </div>
-            </div>
-          </div>
-          <div data-aos="zoom-in" class="col-lg-2 col-sm-12">
-            <div class="main-skills skill5">
-              <div class="card-skills text-center">
-                <img src="img/c++.png" alt="" width="50">
-                <h6>C++</h6>
-                <span>70%</span>
-              </div>
-            </div>
-          </div>
-          <div data-aos="zoom-in" class="col-lg-2 col-sm-12">
-            <div class="main-skills skill6">
-              <div class="card-skills text-center">
-                <img src="img/java.png" alt="" width="50">
-                <h6>Java</h6>
-                <span>60%</span>
-              </div>
-            </div>
-          </div>
-          <div data-aos="zoom-in" class="col-lg-2 col-sm-12">
-            <div class="main-skills skill7">
-              <div class="card-skills text-center">
-                <img src="img/python.png" alt="" width="40">
-                <h6>Python</h6>
-                <span>30%</span>
-              </div>
-            </div>
+        <div class="col-md-3 akademi">
+          <div class="akademi-isi">
+              <h2 data-aos="fade-up" style="padding-left: 20px;">Education</h2>
+            <ul class="timeline">
+              <li>
+                <a data-aos="zoom-in" href="#">UNIVERITAS AHMAD DAHLAN</a>
+                <p data-aos="zoom-in">Informatics Undergraduate<br> 2019 - Now</p>
+              </li>
+              <li>
+                <a data-aos="zoom-in" href="#">SMAN 3 MAGETAN</a>
+                <p data-aos="zoom-in" >Science <br> 2017 - 2019 </p>
+              </li>
+              <li>
+                <a data-aos="zoom-in" href="#">SMPN 1 NGARIBOYO</a>
+                <p data-aos="zoom-in" >2014 - 2017</p>
+              </li>
+              <li>
+                <a data-aos="zoom-in" href="#">SDN 2 BANYUDONO</a>
+                <p data-aos="zoom-in" >2008- 2014</p>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
-    </section>
-    <!-- akhir skill -->
+    </div>
+  </section>
+    <!-- akhir skill dan akademik -->
 
-    <!-- Portofolio -->
-    <section id="portofolio">
-      <div class="container">
-        <div class="row mb-3">
-          <div data-aos="fade-down" class="col text-center">
-            <h2>What Have I Accomplished ?</h2>
-          </div>
-        </div>
-        <div data-aos="zoom-in" class="row justify-content-center">
-          <div id="carouselExampleControls" class="carousel slide w-50" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="img/1.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="img/2.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="img/3.jpeg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="img/4.jpeg" class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-      </div>
-    </section>
-    <!-- Akhir -->
 
     <!-- FindMe -->
     <footer class="footer text-center" style="background-color: #ffffff"  id="findme">
