--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 
     <!-- skill dan akademik -->
     <section class="" id="skills">
-      <div class="row justify-content-center fs-5">
+      <div style="margin-right: 0px; margin-left: 0px;" class="row justify-content-center fs-5">
         <div class="col-md-4">
-          <div class="row justify-content-center">
+          <div class="row">
               <h2 data-aos="fade-up" >Learning Process</h2>
             <div data-aos="zoom-in" class="col-md-4">
               <div class="main-skills skill1">
