--- a/index.html
+++ b/index.html
@@ -203,12 +203,12 @@
               <div class="col-lg-4 mb-5 mb-lg-0">
               </div>
               <div id="" class="col-lg-4 mb-5 mb-lg-0" >
-                  <h4 class="text-uppercase mb-3 text-dark">SOCIAL MEDIA</h4>
-                  <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.instagram.com/mnaufalhafizh20"><i class="fab fa-instagram fa-2x"></i></a>
-                  <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.facebook.com/naufal.h.hafizh"><i class="fab fa-facebook-square fa-2x"></i></a>
-                  <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://twitter.com/EfficientAnsici"><i class="fab fa-twitter-square fa-2x"></i></a>
-                  <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.linkedin.com/in/muhammad-naufal-hafizh-52411120a/"><i class="fab fa-linkedin fa-2x"></i></a>
-                  <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://github.com/NaufalHafizh"><i class="fab fa-github fa-2x"></i></a>
+                  <h4 data-aos="fade-down" class="text-uppercase mb-3 text-dark">SOCIAL MEDIA</h4>
+                  <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.instagram.com/mnaufalhafizh20"><i class="fab fa-instagram fa-2x"></i></a>
+                  <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.facebook.com/naufal.h.hafizh"><i class="fab fa-facebook-square fa-2x"></i></a>
+                  <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://twitter.com/EfficientAnsici"><i class="fab fa-twitter-square fa-2x"></i></a>
+                  <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.linkedin.com/in/muhammad-naufal-hafizh-52411120a/"><i class="fab fa-linkedin fa-2x"></i></a>
+                  <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://github.com/NaufalHafizh"><i class="fab fa-github fa-2x"></i></a>
             </div>
       </div>
   </footer>
