--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,10 +15,10 @@
     <!-- Animate On Scroll Library -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-
     <title>Web Profile | Naufal</title>
-  </head>
-  <body class="text-white bg-dark" id="home">
+
+</head>
+<body class="text-white bg-dark" id="home">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm fixed-top text-uppercase" style="background-color: #ffffff">
       <div class="container">
@@ -80,7 +80,7 @@
           </div>
           <div data-aos="fade-left" class="col-md-5">
             <h2>Wanna Know Me?</h2>
-            <p class="lead">Muhammad Naufal Hafizh, is a Informatics Undergraduate student. Currently studying in Yogyakarta</p>
+            <p class="lead">Muhammad Naufal Hafizh, I'm a low end Web Developer. A Informatics Undergraduate student, currently studying in Yogyakarta. Curious and fast learner</p>
             <p class="lead">Have an interest in : </p>
             <ul class="fa-ul">
               <li class="lead"><span class="fa-li fas fa-edit"></span>UI/UX Design</li>
@@ -194,7 +194,6 @@
     </div>
   </section>
     <!-- akhir skill dan akademik -->
-
 
     <!-- FindMe -->
     <footer class="footer text-center" style="background-color: #ffffff"  id="findme">
