Update CSS dan Index

--- a/index.html
+++ b/index.html
@@ -105,27 +105,24 @@
             <div data-aos="zoom-in" class="col-md-4">
               <div class="main-skills skill1">
                 <div class="card-skills text-center">
-                  <img src="img/html.png" alt="" width="40">
+                  <img src="img/html.png" alt="" width="37">
                   <h6>HTML</h6>
-                  <span>82%</span>
                 </div>
               </div>
             </div>
             <div data-aos="zoom-in" class="col-md-4">
               <div class="main-skills skill2">
                 <div class="card-skills text-center">
-                  <img src="img/css.png" alt="" width="40">
+                  <img src="img/css.png" alt="" width="37">
                   <h6>CSS</h6>
-                  <span>65%</span>
                 </div>
               </div>
             </div>
             <div data-aos="zoom-in" class="col-md-4">
               <div class="main-skills skill3">
                 <div class="card-skills text-center">
-                  <img src="img/php.png" alt="" width="67">
+                  <img src="img/php.png" alt="" width="65">
                   <h6>PHP</h6>
-                  <span>24%</span>
                 </div>
               </div>
             </div>
@@ -134,16 +131,14 @@
                 <div class="card-skills text-center">
                   <img src="img/js.png" alt="" width="30">
                   <h6>Javascript</h6>
-                  <span>30%</span>
                 </div>
               </div>
             </div>
             <div data-aos="zoom-in" class="col-md-4">
               <div class="main-skills skill5">
                 <div class="card-skills text-center">
-                  <img src="img/c++.png" alt="" width="40">
+                  <img src="img/c++.png" alt="" width="45">
                   <h6>C++</h6>
-                  <span>70%</span>
                 </div>
               </div>
             </div>
@@ -152,16 +147,14 @@
                 <div class="card-skills text-center">
                   <img src="img/java.png" alt="" width="40">
                   <h6>Java</h6>
-                  <span>60%</span>
                 </div>
               </div>
             </div>
             <div data-aos="zoom-in" class="col-md-4">
               <div class="main-skills skill7">
                 <div class="card-skills text-center">
-                  <img src="img/python.png" alt="" width="40">
+                  <img src="img/python.png" alt="" width="38">
                   <h6>Python</h6>
-                  <span>30%</span>
                 </div>
               </div>
             </div>
@@ -172,7 +165,7 @@
               <h2 data-aos="fade-up" style="padding-left: 20px;">Education</h2>
             <ul class="timeline">
               <li>
-                <a data-aos="zoom-in" href="#">UNIVERITAS AHMAD DAHLAN</a>
+                <a data-aos="zoom-in" href="#">UNIVERSITAS AHMAD DAHLAN</a>
                 <p data-aos="zoom-in">Informatics Undergraduate<br> 2019 - Now</p>
               </li>
               <li>
