--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <title>Web Profile | Naufal</title>
 
 </head>
-<body class="text-white bg-dark" id="home">
+<body class="text-white bg-dark" id="home" style="padding-top: 15px;">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light shadow-sm fixed-top text-uppercase" style="background-color: #ffffff">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm text-uppercase">
       <div class="container">
-        <h3 class="float-md-start text-dark mb-0">Naufal.</h3>
+        <h3 class="float-md-start text-light">Naufal.</h3>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -79,8 +79,8 @@
             </div>
           </div>
           <div data-aos="fade-left" class="col-md-5">
-            <h2>Wanna Know Me?</h2>
-            <p class="lead">Muhammad Naufal Hafizh, I'm a low end Web Developer. A Informatics Undergraduate student, currently studying in Yogyakarta. Curious and fast learner</p>
+            <h2>Wanna Know Me ?</h2>
+            <p class="lead">Muhammad Naufal Hafizh, I'm a Junior Web Developer. A Informatics Undergraduate student, currently studying in Yogyakarta. Curious and fast learner</p>
             <p class="lead">Have an interest in : </p>
             <ul class="fa-ul">
               <li class="lead"><span class="fa-li fas fa-edit"></span>UI/UX Design</li>
@@ -166,7 +166,7 @@
             <ul class="timeline">
               <li>
                 <a data-aos="zoom-in" href="#">UNIVERSITAS AHMAD DAHLAN</a>
-                <p data-aos="zoom-in">Informatics Undergraduate<br> 2019 - Now</p>
+                <p data-aos="zoom-in">Informatics Undergraduate student<br> 2019 - Now</p>
               </li>
               <li>
                 <a data-aos="zoom-in" href="#">SMAN 3 MAGETAN</a>
